[metadata]
name = poutils
version = 0.1.0a1
description = Command line tools for .po files
long_description = file: README.rst
license = Apache License (2.0)
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Documentation
    Topic :: Utilities

[options]
packages = find:
